--- a/inspector-secret.html
+++ b/inspector-secret.html
@@ -26,8 +26,9 @@
                 position="20 0 20"></a-cone>
                 
             <!-- Create whatever shape you see -->
-            
-
-        </a-scene>
+            <!-- not entirely sure what this assignment is, my best guess is "connect the sots, the dots being the shapes? and they make a square. so i made a cube."-->
+<a-box color="red" width="10" height="10" depth="10" position="0 0 0">
+    </a-box>        
+</a-scene>
     </body>
 </html>
