--- a/inspector-snowman.html
+++ b/inspector-snowman.html
@@ -5,7 +5,17 @@
     </head>
     <body>
         <a-scene>
-        <!-- THIS IS WHERE YOUR CODE WILL GO -->
+            <a-sky color="lightblue" src="mountaintop.jpg"></a-sky>
+            <a-plane rotation="-90 0 0" position="0 0 0" color="white"
+            width="100" height="100"></a-plane>
+            <a-sphere position="0 1 0" color="white" radius="2"></a-sphere>
+                <a-sphere position="0 3.2 0" color="white" radius="1.5"></a-sphere>
+                    <a-sphere position="0 5 0" color="white" radius="1"></a-sphere>
+                    <a-box position="-1.75 3.8 0" length="8" width="0.2" depth="0.2" rotation="0 0 45" color="#613400"></a-box>
+                    <a-box position="1.75 3.8 0" length="8" width="0.2" depth="0.2" rotation="0 0 -45" color="#613400"></a-box>
+                
+            </a-sphere>
         </a-scene>
+        
     </body>
 </html>
