--- a/sky-show.html
+++ b/sky-show.html
@@ -6,11 +6,11 @@
     <body>
         <a-scene>
             <!--
-            Photo Credit: Thanks to
+            Photo Credit: Thanks to H. Raab (i aint typing allat)
             -->
-            <a-sky color="lightblue"></a-sky>
+            <a-sky color="lightblue" src="mountaintop.jpg"></a-sky>
             
-            <a-box position="0 0 -4" rotation="0 45 0"></a-box>
+            <a-box position="0 0 -4"  Rotation="0 45 0"></a-box>
             
         </a-scene>
     </body>
