--- a/3dModel-dog.html
+++ b/3dModel-dog.html
@@ -11,9 +11,10 @@
       <a-sky color="lightblue"></a-sky>
       
       <a-entity 
-      ply-model="src:"
+      ply-model="src:dog.ply"
       position="0 0 -2"
-      rotation="0 0 0"
+      rotation="-90 90 90"
+      scale="3 3 3"
       ></a-entity>
                  
     </a-scene>
